fixed scrollbar sizing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,8 +51,6 @@ header {
 {
 	margin-left: 30px;
 	float: left;
-	height: 300px;
-	width: 65px;
 	background: #F5F5F5;
 	overflow-y: scroll;
 	margin-bottom: 25px;
